kubernetes/apache/teralco-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: teralco-group
  name: teralco-backend-service
  labels:
    app: teralco-back
spec:
  ports:
    - port: 80
      nodePort: 30005
      protocol: TCP
  selector:
    app: teralco-back
    tier: webserver-back
  type: NodePort
