kubernetes/apache/teralco-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: teralco-group
  name: teralco-frontend-service
  labels:
    app: teralco-front
spec:
  ports:
    - port: 80
      nodePort: 30004
      protocol: TCP
  selector:
    app: teralco-front
    tier: webserver-front
  type: NodePort
